@@ -18,7 +18,7 @@
  * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
  * KIND, either express or implied.
  *
- * $Id: gtls.c,v 1.45 2008-02-26 10:30:13 gknauf Exp $
+ * $Id: gtls.c,v 1.46 2008-06-06 18:40:21 bagder Exp $
  ***************************************************************************/
 
 /*
@@ -269,6 +269,21 @@ Curl_gtls_connect(struct connectdata *conn,
     else
       infof(data, "found %d certificates in %s\n",
             rc, data->set.ssl.CAfile);
+  }
+
+  if(data->set.ssl.CRLfile) {
+    /* set the CRL list file */
+    rc = gnutls_certificate_set_x509_crl_file(conn->ssl[sockindex].cred,
+					      data->set.ssl.CRLfile,
+					      GNUTLS_X509_FMT_PEM);
+    if(rc < 0) {
+      failf(data, "error reading crl file %s (%s)\n",
+            data->set.ssl.CRLfile, gnutls_strerror(rc));
+      return CURLE_SSL_CRL_BADFILE;
+    }
+    else
+      infof(data, "found %d CRL in %s\n",
+            rc, data->set.ssl.CRLfile);
   }
 
   /* Initialize TLS session as a client */
